--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       headerRow.appendChild(thDays);
 
       const thPercentPerMonth = document.createElement('th');
-      thPercentPerMonth.textContent = '% per month';
+      thPercentPerMonth.textContent = '%';
       thPercentPerMonth.style.cursor = 'pointer';
       thPercentPerMonth.title = 'Клик для переключения режима: число / процент диагоналей';
       headerRow.appendChild(thPercentPerMonth);
